[package]
name = "tinytemple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
color-eyre = "0.6.2"
fs_extra = "1.3.0"
handlebars = { version = "4.5.0", features = ["dir_source"] }
pulldown-cmark = "0.9.3"
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
